fixed spacing on Uniquely Branded section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -94,7 +94,7 @@
   top: 5%;
   width: 100%;
   text-align: right;
-  padding-right: 1rem;
+  padding-right: 1.5rem;
 }
 
 .serviceLeftText {
@@ -109,6 +109,7 @@
   font-weight: 700;
   position: relative;
   margin-left: -12rem;
+  margin-top: 5rem;
   font-size: 5.5vw;
 }
 
@@ -116,6 +117,8 @@
   .serviceHeaderLeft {
     font-size: 4vw;
     margin-left: -58vw;
+    margin-top: 3.5rem;
+
   }
 }
 
